fix(Scroll): Fix horizontal scroll on mobile.

--- a/src/style/basic.css
+++ b/src/style/basic.css
@@ -18,6 +18,10 @@ body {
   padding: 0;
 }
 
+section, nav, header, footer {
+  overflow-x: hidden;
+}
+
 p {
   font-size: 1rem;
 }
